--- a/gosplash/src/css/common/Header.module.css
+++ b/gosplash/src/css/common/Header.module.css
@@ -1,8 +1,16 @@
 .wrapper {
+    background-color: white;
+    box-shadow: 0 0 8px rgba(50, 50, 50, 0.25);
+    position: fixed;
+    top: 0;
+    width: 100%;
+    z-index: 10;
+}
+
+.container {
     padding: 0 30px;
     display: flex;
     justify-content: space-between;
-    box-shadow: 0 0 8px rgba(50, 50, 50, 0.25);
 }
 
 .link_wrapper {
