--- a/gosplash/src/index.css
+++ b/gosplash/src/index.css
@@ -11,3 +11,9 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+p {
+  color: #757575;
+  font-size: 14px;
+  margin: 0;
+}
